--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ html {
   --grey-border-color-partners: #afb1b8;
   --grey-hero-background-color: #c4c4c4;
   --grey-dark-circle-for-icon: rgba(255, 255, 255, 0.1);
+  --acent-overley-portfolio: rgba(33, 150, 243, 0.9);
 }
 
 /* CLASSES UTILITIES AND UNIVERSAL*/
@@ -625,15 +626,47 @@ body {
   letter-spacing: 0.03em;
 }
 
-/* .portfolio-description {
+.example-card {
+  position: relative;
+  overflow: hidden;
+}
 
+.card-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: var(--acent-overley-portfolio);
+  opacity: 0;
+  transform: translateY(50%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-overlay:hover {
+  transform: translateY(0%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 1;
+}
+
+.portfolio-item:hover,
+.portfolio-item:active {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-description {
   margin-top: 0px;
   margin-bottom: 0px;
+  padding-top: 63px;
+  padding-right: 24px;
+  padding-bottom: 63px;
+  padding-left: 24px;
 
   color: var(--white-text-color);
-  background-color: var(--footer-background-color); 
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-} */
+}
