--- a/css/styles.css
+++ b/css/styles.css
@@ -644,7 +644,7 @@ body {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card-overlay:hover {
+.portfolio-item:hover .card-overlay {
   transform: translateY(0%);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 1;
