--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,8 @@ html {
   --grey-hero-background-color: #c4c4c4;
   --grey-dark-circle-for-icon: rgba(255, 255, 255, 0.1);
   --acent-overley-portfolio: rgba(33, 150, 243, 0.9);
+  --background-modal-color: rgba(0, 0, 0, 0.2);
+  --color-border-modal-button: rgba(0, 0, 0, 0.1);
 }
 
 /* CLASSES UTILITIES AND UNIVERSAL*/
@@ -432,6 +434,57 @@ body {
 
 .partner:not(:last-child) {
   margin-right: 30px;
+}
+
+/*MODAL WINDOW*/
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-modal-color);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+
+  width: 528px;
+  height: 521px;
+  background-color: var(--white-text-color);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-modal {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 8px;
+  right: 8px;
+  background: #ffffff;
+  border: 1px solid var(--color-border-modal-button);
+  border-radius: 50%;
+}
+
+.modal-cross {
+  display: block;
 }
 
 /* ADRESS SECTION*/
