--- a/css/styles.css
+++ b/css/styles.css
@@ -515,6 +515,10 @@ body {
 
 .modal-cross {
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 11px;
+  height: 11px;
 }
 
 /* ADRESS SECTION*/
@@ -732,7 +736,8 @@ body {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .card-overlay {
+.portfolio-item:hover .card-overlay,
+.portfolio-item a:focus .card-overlay {
   transform: translateY(0%);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -740,7 +745,7 @@ body {
 }
 
 .portfolio-item:hover,
-.portfolio-item:active {
+.portfolio-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
